--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 title:            Rouzeta
 tagline:          'Finite State-based Korean Morphological Analyzer'
 description:      'Finite State-based Korean Morphological Analyzer. Made by <a href="http://sangholee.com" target="_blank">Sangho Lee</a>'
-url:              http://rouzeta.com
-baseurl:          http://rouzeta.com
+url:              https://shleekr.github.io
+baseurl:          https://shleekr.github.io
 
 author:
   name:           'Sangho Lee'
