--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,9 @@ tagline:          'Finite State-based Korean Morphological Analyzer'
 description:      'Finite State-based Korean Morphological Analyzer. Made by <a href="http://sangholee.com" target="_blank">Sangho Lee</a>'
 url:              https://shleekr.github.io
 baseurl:          https://shleekr.github.io
-disqus:           shleekr
+disqus:           yes
+disqus_id:        shleekr-github-io
+comments:         true
 
 author:
   name:           'Sangho Lee'
